--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/pm": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@types/prismjs": "^1.26.5",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +30,8 @@
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
+    "openai": "^6.15.0",
+    "prismjs": "^1.30.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
